--- a/css/styles.css
+++ b/css/styles.css
@@ -142,10 +142,14 @@ ul {
 /* Main */
 
 .banner{
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 200px;
     padding-bottom: 200px;
+    
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/command.jpg');
     height: 600px;
+    max-width: 1600px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -234,6 +238,18 @@ button{
 }
 .features>.feature-list:not(:last-child){
     margin-right:30px;
+}
+.feature-icon{
+    display: block;
+    height: 120px;
+    background-color: var(--backforteamlist);
+    margin-bottom: 30px;
+}
+
+.feature-one{
+    display: flex;
+    width: 70px;
+    height: 70px;
 }
 
 .features h3{
