--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
     --webfoot:#ffffff;
     --buttonmenucolor:#212121;
     --border-bottom:#ECECEC;
+    --iconcolor: #AFB1B8;
 }
 body{
     font-family:'Roboto',sans-serif;
@@ -30,7 +31,8 @@ li{
 h1,
 h3,
 p,
-ul {
+ul,
+a {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -357,14 +359,25 @@ button{
     display: flex;
     flex-basis: calc(100%/4);
     justify-content: center;
-    margin-bottom: 30px;
 }
 .social-links{
     display: flex;
+    padding: 0;
+    margin-bottom: 30px;
+    
     
 }
 .social-item{
     margin-right: 10px;
+    fill: var(--headback);
+    
+    
+}
+.social-icon{
+    
+}
+.social-item:hover,.social-item:focus{
+    fill: var(--logocolor);
 }
 .footer{
 background-color: var(--footback);
