--- a/css/styles.css
+++ b/css/styles.css
@@ -373,8 +373,6 @@ button{
     justify-content: center;
     background-color: var(--buttontext);
     border-radius: 50%;
-}
-.social-icon{
     fill: var(--iconcolor);
 }
 .social-item:hover,.social-item:focus{
@@ -399,21 +397,27 @@ button{
     
 }
 .client-pozition{
-    display: flex;
+    display: inline-flex;
     border: 1px solid var(--iconcolor);
     width: 170px;
     height: 92px;
     margin-right: 30px;
     align-items: center;
     justify-content: center;
+    fill: var(--iconcolor);
+}
+.client-pozition:hover,.client-pozition:focus{
+    fill: var(--iconhover);
 }
 .footer{
+display: flex;
 background-color: var(--footback);
 padding-top: 60px;
 padding-bottom: 60px;
 
 }
 .foot-container{
+    display: flex;
     margin-left: auto;
     margin-right: auto;
 }
@@ -450,11 +454,40 @@ padding-bottom: 60px;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
+.links-container{
+    padding: 0;
+    margin-left: 70px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--buttontext);
+}
+.links-list{
+    display: flex;
+    margin-top: 20px;
+}
+.links-item{
+    display: flex;
+    margin-right: 10px;
+    width: 44px;
+    height: 44px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    fill: var(--iconcolor);
+}
+.links-item:hover,.links-item:focus{
+    background-color: var(--iconhover);
+}
 .footer a:hover,
 .footer a:focus{
     text-decoration: underline;
     text-decoration-color: var(--buttonhover);
 }
+
 
 /* Portfolio*/
 
