--- a/css/styles.css
+++ b/css/styles.css
@@ -211,11 +211,11 @@ button{
     line-height: 1.9;
     text-align: center;
     letter-spacing: 0.06em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 .hero-button:hover,
 .hero-button:focus{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--buttonhover);
     color:var(--headback);
 }
@@ -393,11 +393,13 @@ button{
 }
 .client-list{
     display: flex;
+    
 
     
 }
 .client-pozition{
     display: inline-flex;
+    border-radius: 4px;
     border: 1px solid var(--iconcolor);
     width: 170px;
     height: 92px;
@@ -516,12 +518,12 @@ padding-bottom: 60px;
     padding: 6px 22px;
     border-width: 0px;
 }
-li>button:hover,
-li>button:focus,
-li>button.current{
+.menu-item>button:hover,
+.menu-item>button:focus,
+.menu-item>button.current{
     color: var(--headback);
     background-color: var(--buttonhover);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     
 }
 
@@ -544,6 +546,9 @@ li>button.current{
 }
 .item:nth-child(3n){
     margin-right: 0;
+}
+.item:hover,.item:focus{
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .item-text{
     padding-top: 20px;
