--- a/css/styles.css
+++ b/css/styles.css
@@ -369,11 +369,17 @@ button{
     width: 44px;
     height: 44px;
     margin-right: 10px;
-    align-items: center;
-    justify-content: center;
     background-color: var(--buttontext);
     border-radius: 50%;
-    fill: var(--iconcolor);
+    
+}
+.social-item>a{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
 }
 .social-item:hover,.social-item:focus{
     background-color: var(--iconhover);
@@ -404,13 +410,14 @@ button{
     border: 1px solid var(--iconcolor);
     width: 170px;
     height: 92px;
-    fill: var(--iconcolor);
+    fill: currentColor;
 }
 .client-pozition:not(:last-child){
     margin-right: 30px;
 }
 .client-pozition>a{
     display: flex;
+    cursor: pointer;
     width: 100%;
     height: 100%;
     align-items: center;
