--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,7 @@ button{
     height: 120px;
     background-color: var(--backforteamlist);
     margin-bottom: 30px;
+    border-radius: 4px;
     
 }
 .feature-item{
@@ -416,8 +417,7 @@ button{
 }
 .client-pozition{
     display:flex;
-    border-radius: 4px;
-    border: 1px solid var(--iconcolor);
+    
     width: 170px;
     height: 92px;
 }
@@ -435,6 +435,8 @@ button{
     cursor: pointer;
     width: 100%;
     height: 100%;
+    border-radius: 4px;
+    border: 1px solid var(--iconcolor);
     align-items: center;
     justify-content: center;
     fill: var(--iconcolor);
@@ -442,6 +444,7 @@ button{
 }
 .client-pozition>a:hover,.client-pozition>a:focus{
     fill: var(--iconhover);
+    border-color: var(--iconhover);
     
 }
 .footer{
